--- a/index.html
+++ b/index.html
@@ -132,19 +132,18 @@
           <div class="col-12">
             <div class="about-story">
               <h4 style="margin-top: 20px;"><strong>Academic journey</strong></h4>
-              <p>I began my academic journey in Tarragona, Spain, where I completed a <em>technological baccalaureate</em>. Later, I moved to Barcelona to pursue a Bachelor’s degree in <strong>Industrial Technologies Engineering at UPC (Universitat Politècnica de Catalunya), ETSEIB</strong>. I remember this transition as one of the most challenging periods of my life — moving to a new city, adapting to a demanding academic environment — but I faced it with great motivation.</p>
-              <p>I truly enjoyed my studies, but I also felt the urge to specialize in a specific field — particularly in <span style="color: orange; font-weight: bold;">ARTIFICIAL INTELLIGENCE</span> and <span style="color: rgb(0, 64, 255); font-weight: bold;">ROBOTICS</span>. At the same time, I didn’t want to step away from my foundation in industrial engineering. That ambition led me to apply for the <strong>Double Master’s program</strong> in <strong>Industrial Engineering and Automatic Control & Robotics</strong>, also at <strong>UPC, ETSEIB</strong>. These have been formative years, where I’ve been able to dive deep into the topics that fascinate me most.</p>
-              <p>Most recently, I applied to carry out my <strong>Master’s Thesis</strong> at one of the most prestigious universities in Europe and the world: <strong>EPFL (École Polytechnique Fédérale de Lausanne), in Switzerland</strong>. I still remember the moment I received the acceptance letter, which marked the beginning of one of my biggest personal and academic adventures — which I’m currently living. I’m now part of the <strong>DISAL</strong> lab, working on my thesis titled <strong><em>"Belief Sharing and Merging of a Multi-Robot System for Gas Source Localization Task"</em></strong>, which is planned to be presented in late July 2025.</p>
+              <p>I began my academic journey in Tarragona, Spain, where I completed a <em>technological baccalaureate</em>. Later, I moved to Barcelona to pursue a Bachelor’s degree in <strong>Industrial Technologies Engineering at UPC (Universitat Politècnica de Catalunya), ETSEIB</strong>. It was a challenging transition but I faced it with motivation.</p>
+              <p>I truly enjoyed my studies, but I also wanted to specialize in a specific field — <span style="color: orange; font-weight: bold;">ARTIFICIAL INTELLIGENCE</span> and <span style="color: rgb(0, 64, 255); font-weight: bold;">ROBOTICS</span>. However, I didn’t want to step away from my foundation in industrial engineering. Then, I applied for the <strong>Double Master’s program</strong> in <strong>Industrial Engineering and Automatic Control & Robotics</strong>, also at <strong>UPC, ETSEIB</strong>.</p>
+              <p>Most recently, I applied to carry out my <strong>Master’s Thesis</strong> at <strong>EPFL (École Polytechnique Fédérale de Lausanne), in Switzerland</strong>. I’m now part of the <strong>DISAL</strong> lab, working on my thesis titled <strong><em>"Belief Sharing and Merging of a Multi-Robot System for Gas Source Localization Task"</em></strong>, which is planned to be presented in late July 2025.</p>
 
               <h4 style="margin-top: 40px;"><strong>Interests</strong></h4>
-              <p>As a kid, I loved spending time drawing and crafting — activities that sparked my imagination and taught me the value of design. Years later, when I discovered how mathematics could be applied to images, I was fascinated. That moment opened the door to <span style="color: rgb(25, 190, 0); font-weight: bold;">COMPUTER VISION</span>, a field that felt like magic — turning raw pixels into understanding. It became clear to me: this was how robots could “see,” how they could begin to <strong>perceive the world like we do</strong>.</p>
-              <p>As I delved deeper into this world, I encountered <span style="color: orange; font-weight: bold;">ARTIFICIAL INTELLIGENCE</span>, and something clicked. I was amazed that something so abstract — statistical models, probabilities, data — could give rise to <strong>intelligent behavior</strong>. I didn’t just study it; I started building models on my own, outside of class, driven purely by curiosity. <strong>If Computer Vision gives robots eyes, AI gives them a brain</strong>.</p>
-              <p>But perception and reasoning weren’t enough for me — I wanted those ideas to move. That’s when <span style="color: rgb(0, 64, 255); font-weight: bold;">ROBOTICS</span> brought everything together. Combining my engineering background with my growing interest in perception and intelligence, I started designing systems that could act in the real world. Robotics gave me the hands <strong>to match the eyes and the brain, enabling interaction with the world</strong>.</p>
-              <p>To complete the picture, I explored algorithms for <span style="color: rgb(186, 0, 189); font-weight: bold;">NAVIGATION AND LOCALIZATION</span>, giving machines the ability to understand where they are, where they’re going, and how to get there efficiently. It’s the final piece of the puzzle — granting them <strong>freedom of movement and true autonomy in the physical world</strong>.</p>
-              <p>This journey hasn’t just shaped my academic interests — it’s shaped who I am. I’m passionate about solving meaningful problems, driven by a need to understand how things work, and motivated by the possibility of shaping a future where technologies improve lives.</p>
+              <p>As a kid, I loved spending time drawing and crafting. Years later, when I discovered how mathematics could be applied to images, I was fascinated. That moment opened the door to <span style="color: rgb(25, 190, 0); font-weight: bold;">COMPUTER VISION</span>, a field that felt like magic — turning raw pixels into understanding. It became clear to me: this was how robots could “see,” how they could begin to <strong>perceive the world like we do</strong>.</p>
+              <p>As I delved deeper into this world, I encountered <span style="color: orange; font-weight: bold;">ARTIFICIAL INTELLIGENCE</span>, and something clicked. I was amazed that something so abstract — statistical models, probabilities, data — could give rise to <strong>intelligent behavior</strong>. <strong>If Computer Vision gives robots eyes, AI gives them a brain</strong>.</p>
+              <p>But perception and reasoning weren’t enough for me — I wanted those ideas to move. That’s when <span style="color: rgb(0, 64, 255); font-weight: bold;">ROBOTICS</span> brought everything together. Robotics gave me the hands <strong>to match the eyes and the brain, enabling interaction with the world</strong>.</p>
+              <p>To complete the picture, I explored algorithms for <span style="color: rgb(186, 0, 189); font-weight: bold;">NAVIGATION AND LOCALIZATION</span>, giving machines the ability to understand where they are and where they’re going. It’s the final piece of the puzzle — granting them <strong>freedom of movement and true autonomy in the physical world</strong>.</p>
               <p>My academic record reflects this journey through:</p>
-<div style="margin-left: 0px;">
-                <ul>
+              <div style="text-align: center;">
+                <ul style="display: inline-block; text-align: left;">
                   <li><strong>Computer Vision</strong> – 9.0 (With Honors)</li>
                   <li><strong>Advanced Topics in Computer Vision</strong> – 10.0</li>
                   <li><strong>Artificial Intelligence Applied to Engineering</strong> – 9.1</li>
@@ -152,6 +151,7 @@
                   <li><strong>Mobile Robotics and Navigation</strong> – 9.0</li>
                 </ul>
               </div>
+
               
               <p style="font-size: 0.9em;"><em>*Grades are on a 10-point scale.</em></p>
 
@@ -568,12 +568,12 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
-              <a href="turtlebot_maze_file.html" style="text-decoration: none; color: inherit;">
+              <a href="hand_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
                   <!-- Imagen y superposición -->
-                  <img src="assets/img/portfolio/img_turtlebot.png" 
+                  <img src="assets/img/portfolio/img_handtracking.png" 
                       style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
 
                   <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
@@ -583,8 +583,8 @@
                               border-radius: 15px;" 
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
-                    <strong>TURTLEBOT AUTONOMOUS EXPLORATION</strong>
-                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Mobile Robotics and Navigation</em></span>
+                    <strong>HAND GESTURE RECOGNITION AND TRACKING</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
                   </div>
 
                 </div>
@@ -616,7 +616,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
-              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+              <a href="headpose_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
@@ -638,6 +638,79 @@
                 </div>
               </a>
             </div>
+            
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="turtlebot_maze_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_turtlebot.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>TURTLEBOT AUTONOMOUS EXPLORATION</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Mobile Robotics and Navigation</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="montecarlo_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_montecarlo.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>MONTE CARLO LOCALIZATION ALGORITHM</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Mobile Robots, Navigation and Localization</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="injurypred_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_injury.jpg" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>FOOTBALL INJURY PREDICTION</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Artificial Intelligence</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-personal">
               <a href="mold_file.html" style="text-decoration: none; color: inherit;">
@@ -656,7 +729,7 @@
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
                     <strong>PLANT MOLD DETECTION</strong>
-                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Artificial Intelligence</em></span>
                   </div>
 
                 </div>
@@ -680,14 +753,14 @@
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
                     <strong>FLOWERS COUNTING</strong>
-                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Artificial Intelligence</em></span>
                   </div>
 
                 </div>
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university filter-personal">
               <a href="gameoflife_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
@@ -735,6 +808,29 @@
               </a>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="ballintube_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_balltube.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>BALL IN TUBE</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Embedded and Real-Time Systems</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
           </div><!-- End Portfolio Container -->
 
 
