--- a/roboticchess_file.html
+++ b/roboticchess_file.html
@@ -62,10 +62,10 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="#" class="github"><i class="bi bi-github"></i></a>
-      <a href="#" class="email"><i class="bi bi-envelope"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="index.html#contact" class="phone"><i class="bi bi-telephone"></i></a>
+      <a href="index.html#contact" class="email"><i class="bi bi-envelope"></i></a>
+      <a href="index.html#contact" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="index.html#contact" class="github"><i class="bi bi-github"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -126,35 +126,20 @@
                         Your browser does not support the video tag.
                     </video> 
                     <p style="margin-top: 10px;">
-                        The <b>Social Force Model</b> it’s a mathematical model used to simulate the behavior of mobile robots and its interaction with the people and other objects in its social environment.
+                        Using a UR3 robotic arm and the <b>Robot Operating System (ROS)</b>, we designed a system capable of detecting a physical chessboard, recognizing the position of each piece through computer vision, planning optimal moves using a chess engine, and executing them precisely with the robot. 
                     </p>
-
-                    <video autoplay muted loop style="margin-top: 0px; width: 100%; height: auto; border-radius: 0px; position: relative; left: 0px;">
-                        <source src="assets/vid/vid_ur3_sim.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video> 
-                    <img src="assets/img/portfolio/img_socialforce5.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 70%; height: auto; border-radius: 0px; position: relative; left: 75px;">
-                    <p style="margin-top: 30px;">
-                        Three different scenarios have been simulated.
-                    </p>
-                    <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
-                        Scenario 1: Single Obstacle Avoidance
-                    </p>
-                    <img src="assets/img/portfolio/img_socialforce1.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
-                    <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
-                        Scenario 2: Multiple Obstacle Avoidance
-                    </p>
-                    <img src="assets/img/portfolio/img_socialforce2.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
-                    <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
-                        Scenario 3: Dynamic Obstacle Avoidance (Person)
-                    </p>
-                    <img src="assets/img/portfolio/img_socialforce3.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
+                    <img src="assets/img/portfolio/img_chess1.png" alt="Descripción de la imagen" style="margin-top: 10px; width: 60%; height: auto; border-radius: 0px; position: relative; left: 150px;">
                     <p style="margin-top: 50px;">
-                        You can check the full source code on <b>GitHub</b> using the following link:
-                        <a href="https://github.com/marcarias/mobile_robots/tree/main/MATLAB_obstacle_avoidance" target="_blank" style="color: #007bff; text-decoration: none;">
+                        We first developed and tested the entire system in simulation using <b>Gazebo</b> and <b>ROS</b>, which allowed us to efficiently validate the UR3 arm’s performance before transferring it to the real world.
+                    </p>
+                    <img src="assets/img/portfolio/img_chess2.png" alt="Descripción de la imagen" style="margin-top: 10px; width: 60%; height: auto; border-radius: 0px; position: relative; left: 150px;">
+                    <p style="margin-top: 30px;">
+                        You can check the source code on <b>GitHub</b> using the following link:
+                        <a href="https://github.com/marcarias/chess_project" target="_blank" style="color: #007bff; text-decoration: none;">
                             GitHub Repository
                         </a>
-                    </p>                                        
+                    </p>                    
+                                
                 </div>
             </div>
 
@@ -169,7 +154,7 @@
                         <li><strong>Date</strong>: May, 2023</li>
                         <li>
                             <strong>Source Code</strong>: 
-                            <a href="https://github.com/marcarias/mobile_robots/tree/main/MATLAB_obstacle_avoidance" 
+                            <a href="https://github.com/marcarias/chess_project" 
                               target="_blank" 
                               style="color: #007bff; text-decoration: none;">
                               GitHub Repository
