--- a/engihack_file.html
+++ b/engihack_file.html
@@ -62,10 +62,10 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="#" class="github"><i class="bi bi-github"></i></a>
-      <a href="#" class="email"><i class="bi bi-envelope"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="index.html#contact" class="phone"><i class="bi bi-telephone"></i></a>
+      <a href="index.html#contact" class="email"><i class="bi bi-envelope"></i></a>
+      <a href="index.html#contact" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="index.html#contact" class="github"><i class="bi bi-github"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -160,7 +160,6 @@
     </div>
 
     </section>
-
 
   </main>
 
