--- a/gameoflife_file.html
+++ b/gameoflife_file.html
@@ -62,10 +62,10 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="#" class="github"><i class="bi bi-github"></i></a>
-      <a href="#" class="email"><i class="bi bi-envelope"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="index.html#contact" class="phone"><i class="bi bi-telephone"></i></a>
+      <a href="index.html#contact" class="email"><i class="bi bi-envelope"></i></a>
+      <a href="index.html#contact" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="index.html#contact" class="github"><i class="bi bi-github"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -120,7 +120,7 @@
                     <p style="font-style: italic; margin-top: -15px;"><strong>Universitat Politècnica de Catalunya (UPC)</strong></p>
 
                     <!-- Agregar una imagen debajo del texto -->
-                    <img src="assets/img/portfolio/img_conway.gif" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px; margin-left: 110px; clip-path: inset(0 10px 10px 0);">
+                    <img src="assets/img/portfolio/img_conway.gif" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 50%; height: auto; border-radius: 10px; margin-left: 110px; clip-path: inset(0 10px 10px 0);">
                   <p style="margin-top: 30px;">
                       You can check the full source code on <b>GitHub</b> using the following link:
                       <a href="https://github.com/marcarias/game_of_life" target="_blank" style="color: #007bff; text-decoration: none;">
