--- a/socialforcemodel_file.html
+++ b/socialforcemodel_file.html
@@ -62,10 +62,10 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="#" class="github"><i class="bi bi-github"></i></a>
-      <a href="#" class="email"><i class="bi bi-envelope"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="index.html#contact" class="phone"><i class="bi bi-telephone"></i></a>
+      <a href="index.html#contact" class="email"><i class="bi bi-envelope"></i></a>
+      <a href="index.html#contact" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="index.html#contact" class="github"><i class="bi bi-github"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -132,15 +132,15 @@
                     <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
                         Scenario 1: Single Obstacle Avoidance
                     </p>
-                    <img src="assets/img/portfolio/img_socialforce1.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
+                    <img src="assets/img/portfolio/gif_socialforcemodel1.gif" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
                     <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
                         Scenario 2: Multiple Obstacle Avoidance
                     </p>
-                    <img src="assets/img/portfolio/img_socialforce2.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
+                    <img src="assets/img/portfolio/gif_socialforcemodel2.gif" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
                     <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
                         Scenario 3: Dynamic Obstacle Avoidance (Person)
                     </p>
-                    <img src="assets/img/portfolio/img_socialforce3.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
+                    <img src="assets/img/portfolio/gif_socialforcemodel3.gif" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
                     <p style="margin-top: 50px;">
                         You can check the full source code on <b>GitHub</b> using the following link:
                         <a href="https://github.com/marcarias/mobile_robots/tree/main/MATLAB_obstacle_avoidance" target="_blank" style="color: #007bff; text-decoration: none;">
