--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Passionate about <strong>technology</strong>, I strive to contribute to a <strong>positive change</strong> by creating and developing <strong>solutions</strong> that make everyday life easier and more sustainable. I believe that technology should serve people, not just by solving problems, but by empowering individuals and opening up new opportunities for growth and connection. I’m driven by curiosity, a desire to keep learning, and a commitment to building a future that works for everyone.</p>
+        <p>Passionate about <strong>technology</strong>, I strive to contribute to a <strong>positive change</strong> by creating and developing <strong>solutions</strong> that make everyday life easier and more sustainable. I believe that technology should serve people, not just by solving problems, but by empowering individuals and opening up new opportunities for growth and connection.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -377,6 +377,17 @@
                 </li>
               </ul>
             </div>
+
+            <h3 class="resume-title" style="color: #317ccd;">Languages</h3>
+            <div class="resume-item">
+              <ul style="list-style-type: none; padding-left: 0; font-size: 14px; line-height: 1.6; margin: 12px">
+                <li><strong>Spanish:</strong> Native</li>
+                <li><strong>Catalan:</strong> Native</li>
+                <li><strong>English:</strong> Fluent</li>
+                <li><strong>French:</strong> A2 – Currently learning</li>
+              </ul>
+            </div>
+
           </div>
         </div>
       </div>
