--- a/atcv_football_file.html
+++ b/atcv_football_file.html
@@ -264,10 +264,9 @@
                 This project demonstrates the power of computer vision in resolving ambiguous situations in sports. By combining homography and 3D modeling, the analysis provides a transparent and accurate resolution to the controversy using minimal resources, <b>relying solely on the analysis of several 2D images taken simultaneously</b>. The methodology is not only reproducible but also holds significant potential for enhancing current technologies like VAR
               </p>
 
-              <p style= "margin-top: 30px;">
-                You can find the full detailed explanation in the PDF attached below.
+              <p style="margin-top: 0px;">
+                  You can find the full detailed explanation of the project on <a href="assets/pdf/actv_football.pdf" target="_blank">this PDF</a>.
               </p>
-              <embed src="assets/pdf/actv_football.pdf" type="application/pdf" width="100%" height="600px" />
             </div>
           </div>
 
@@ -280,6 +279,7 @@
                 <li><strong>Tools</strong>: MATLAB</li>
                 <li><strong>Location</strong>: Barcelona (Spain)</li>
                 <li><strong>Date</strong>: November, 2024</li>
+                <li><strong>Full project</strong>: <a href="assets/pdf/actv_football.pdf" target="_blank">PDF</a></li>
               </ul>
             </div>
           </div>
