--- a/ballintube_file.html
+++ b/ballintube_file.html
@@ -141,9 +141,8 @@
                         In this project, we implemented and tested <b>four different control strategies</b> to manage the <b>vertical position of a ping-pong ball suspended in a tube by a fan</b>. Using an <b>Arduino</b> with <b>FreeRTOS</b>, we explored <b>ON/OFF control</b>, <b>hysteresis</b>, <b>simple feedback</b>, and a <b>PID controller</b> to regulate the ball's height as it switched between two setpoints every 10 seconds. By analyzing system performance under each method, we observed how control precision and responsiveness improved progressively, culminating in the <b>PID controller</b>, which showed the most promise—especially when adjusting setpoint intervals.
                     </p>
                     <p style="margin-top: 0px;">
-                        You can find the full detailed explanation of the project in the PDF attached below.
-                    </p>    
-                    <embed src="assets/pdf/embedded_ballintube.pdf" type="application/pdf" width="100%" height="600px" /> 
+                        You can find the full detailed explanation of the project on <a href="assets/pdf/embedded_ballintube.pdf" target="_blank">this PDF</a>.
+                    </p>
 
                     
                 </div>    
@@ -158,6 +157,7 @@
                       <li><strong>Tools</strong>: Arduino</li>
                       <li><strong>Location</strong>: Barcelona (Spain)</li>
                       <li><strong>Date</strong>: Dec, 2023</li>
+                      <li><strong>Full project</strong>: <a href="assets/pdf/embedded_ballintube.pdf" target="_blank">PDF</a></li>
                   </ul>
               </div>
             </div>
