--- a/injurypred_file.html
+++ b/injurypred_file.html
@@ -128,9 +128,11 @@
                         Using <b>web scraping techniques</b> to collect data from specialized platforms, and after a thorough process of data cleaning, dimensionality reduction, and model training, a system was developed to detect <b>patterns</b> that could signal the risk of muscular injuries. Although the model faces challenges—especially due to the lack of training data and the natural imbalance between injured and non-injured players—the results highlight the promising potential of artificial intelligence as a proactive tool for <b>injury prevention in professional sports</b>.
                     </p>    
                     <p style="margin-top: 0px;">
-                        You can find the full detailed explanation of the project in the PDF attached below.
-                    </p>    
-                    <embed src="assets/pdf/ml_injury.pdf" type="application/pdf" width="100%" height="600px" />              
+                        You can find the full detailed explanation of the project on <a href="assets/pdf/ml_injury.pdf" target="_blank">this PDF</a>.
+                    </p>
+
+
+              
                 </div>
             </div>
 
@@ -143,6 +145,7 @@
                         <li><strong>Tools</strong>: Python</li>
                         <li><strong>Location</strong>: Barcelona (Spain)</li>
                         <li><strong>Date</strong>: May, 2023</li>
+                        <li><strong>Full project</strong>: <a href="assets/pdf/ml_injury.pdf" target="_blank">PDF</a></li>
                     </ul>
                 </div>
             </div>
