--- a/headpose_file.html
+++ b/headpose_file.html
@@ -126,16 +126,19 @@
                         Your browser does not support the video tag.
                     </video> 
                     <p style="margin-top: 10px;">
-                        The main goal of this project was to estimate the <b>3D position and orientation of the head in real time</b> using just a standard laptop webcam. Several methods were explored, all based on <b>classic computer vision techniques</b> to avoid training AI models and keep the system as lightweight and computationally efficient as possible. You can find more details in the attached PDF document.
+                        The main goal of this project was to estimate the <b>3D position and orientation of the head in real time</b> using just a standard laptop webcam. Several methods were explored, all based on <b>classic computer vision techniques</b> to avoid training AI models and keep the system as lightweight and computationally efficient as possible.
                     </p>
-                    <embed src="assets/pdf/actv_headpose.pdf" type="application/pdf" width="100%" height="600px" />
 
-                    <p style="margin-top: 30px;">
+                    <p style="margin-top: 0px;">
                         You can check the source code on <b>GitHub</b> using the following link:
                         <a href="https://github.com/marcarias/3d_head_pose_estimation/blob/main/main.py" target="_blank" style="color: #007bff; text-decoration: none;">
                             GitHub Repository
                         </a>
-                    </p>                    
+                    </p>  
+                                       
+                    <p style="margin-top: 0px;">
+                        You can find the full detailed explanation of the project on <a href="assets/pdf/actv_headpose.pdf" target="_blank">this PDF</a>.
+                    </p>                  
                                 
                 </div>
             </div>
@@ -157,6 +160,7 @@
                               GitHub Repository
                             </a>
                         </li>
+                        <li><strong>Full project</strong>: <a href="assets/pdf/actv_headpose.pdf" target="_blank">PDF</a></li>
                     </ul>
                 </div>
             </div>
